--- a/fb-leads/package.json
+++ b/fb-leads/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "concurrently": "^8.2.0",
-    "mongodb-memory-server": "^10.1.4"
+    "mongodb-memory-server": "^10.1.4",
+    "recharts": "^3.1.0"
   }
 }
