--- a/fb-leads/client/package.json
+++ b/fb-leads/client/package.json
@@ -14,16 +14,16 @@
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "recharts": "^3.1.0"
   },
-"scripts": {
-  "start": "react-scripts start",
-  "dev": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject"
-}
-,
+  "scripts": {
+    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -48,4 +48,4 @@
     "tailwindcss": "^3.3.5"
   },
   "proxy": "http://localhost:5000"
-} 
+}
